# PhotoBatch

./: .gitignore  ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  ConvertMode.cpp  ConvertMode.h  Mode.cpp  Mode.h  PhotoBatch.cpp  README.md  RenameMode.cpp  RenameMode.h  ResizeMode.cpp  ResizeMode.h  Utils.cpp  Utils.h  main.cpp  makefile  teste
Unittests/: CMakeLists.txt  TestArgumentParser.cpp
